Bug 170160 - don't use sprintf for simple tasks as converting a number to a string. It's expensive and give you an ASCII string when a Unicode one is required. r=bryner@netscape.com, sr=brendan@mozilla.org